force-app/main/default/objects/AiAssessmentSync__c/AiAssessmentSync__c.object-meta.xml
<CustomObject>
    <label>AI査定連携</label>
    <nameField>
        <displayFormat>AA-{00000000}</displayFormat>
        <label>AI査定連携No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>