force-app/main/default/objects/AiAssessmentSync__c/fields/after_tire_size_chage__c.field-meta.xml
<CustomField>
    <fullName>after_tire_size_chage__c</fullName>
    <label>リアタイヤサイズ入力値</label>
    <length>128</length>
    <type>Text</type>
</CustomField>