force-app/main/default/objects/AiAssessmentSync__c/fields/after_tire_size_flg__c.field-meta.xml
<CustomField>
    <fullName>after_tire_size_flg__c</fullName>
    <label>リアタイヤサイズ入力適用フラグ</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>