force-app/main/default/objects/AiAssessmentSync__c/fields/airbag_price__c.field-meta.xml
<CustomField>
    <fullName>airbag_price__c</fullName>
    <label>エアバッグ類料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>