force-app/main/default/objects/AiAssessmentSync__c/fields/aircon_cd__c.field-meta.xml
<CustomField>
    <fullName>aircon_cd__c</fullName>
    <label>エアコン</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>