force-app/main/default/objects/AiAssessmentSync__c/fields/aircon_nm__c.field-meta.xml
<CustomField>
    <fullName>aircon_nm__c</fullName>
    <label>冷房</label>
    <length>255</length>
    <type>Text</type>
</CustomField>