force-app/main/default/objects/AiAssessmentSync__c/fields/answer1__c.field-meta.xml
<CustomField>
    <fullName>answer1__c</fullName>
    <label>追加画像用URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>