force-app/main/default/objects/AiAssessmentSync__c/fields/answer2__c.field-meta.xml
<CustomField>
    <fullName>answer2__c</fullName>
    <inlineHelpText>Cコネのみ入力</inlineHelpText>
    <label>買取商談No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>