force-app/main/default/objects/AiAssessmentSync__c/fields/assessor_gaisou_value__c.field-meta.xml
<CustomField>
    <fullName>assessor_gaisou_value__c</fullName>
    <label>査定者外装評価</label>
    <length>5</length>
    <type>Text</type>
</CustomField>