force-app/main/default/objects/AiAssessmentSync__c/fields/assessor_value__c.field-meta.xml
<CustomField>
    <fullName>assessor_value__c</fullName>
    <label>査定者評価点</label>
    <length>5</length>
    <type>Text</type>
</CustomField>