force-app/main/default/objects/AiAssessmentSync__c/fields/auto_cat_color_name__c.field-meta.xml
<CustomField>
    <fullName>auto_cat_color_name__c</fullName>
    <label>自動入力カタログカラー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>