force-app/main/default/objects/AiAssessmentSync__c/fields/auto_color_flg__c.field-meta.xml
<CustomField>
    <fullName>auto_color_flg__c</fullName>
    <label>車体色・カタログカラー自動入力判定フラグ</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>