force-app/main/default/objects/AiAssessmentSync__c/fields/body_number__c.field-meta.xml
<CustomField>
    <fullName>body_number__c</fullName>
    <label>車台番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>