force-app/main/default/objects/AiAssessmentSync__c/fields/brand_name__c.field-meta.xml
<CustomField>
    <fullName>brand_name__c</fullName>
    <label>ブランド</label>
    <length>255</length>
    <type>Text</type>
</CustomField>