force-app/main/default/objects/AiAssessmentSync__c/fields/car_history__c.field-meta.xml
<CustomField>
    <fullName>car_history__c</fullName>
    <label>車歴</label>
    <length>255</length>
    <type>Text</type>
</CustomField>