force-app/main/default/objects/AiAssessmentSync__c/fields/car_name__c.field-meta.xml
<CustomField>
    <fullName>car_name__c</fullName>
    <label>車種名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>