force-app/main/default/objects/AiAssessmentSync__c/fields/car_tax__c.field-meta.xml
<CustomField>
    <fullName>car_tax__c</fullName>
    <label>自動車税</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>