force-app/main/default/objects/AiAssessmentSync__c/fields/cat_color_id__c.field-meta.xml
<CustomField>
    <fullName>cat_color_id__c</fullName>
    <label>カタログカラーID</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>