force-app/main/default/objects/AiAssessmentSync__c/fields/cat_color_name__c.field-meta.xml
<CustomField>
    <fullName>cat_color_name__c</fullName>
    <label>カタログカラー</label>
    <length>250</length>
    <type>Text</type>
</CustomField>