force-app/main/default/objects/AiAssessmentSync__c/fields/color__c.field-meta.xml
<CustomField>
    <fullName>color__c</fullName>
    <label>車体色</label>
    <length>50</length>
    <type>Text</type>
</CustomField>