force-app/main/default/objects/AiAssessmentSync__c/fields/color_change__c.field-meta.xml
<CustomField>
    <fullName>color_change__c</fullName>
    <label>色替え</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>