force-app/main/default/objects/AiAssessmentSync__c/fields/color_code__c.field-meta.xml
<CustomField>
    <fullName>color_code__c</fullName>
    <label>カラーコード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>