force-app/main/default/objects/AiAssessmentSync__c/fields/color_group_nm__c.field-meta.xml
<CustomField>
    <fullName>color_group_nm__c</fullName>
    <label>色系統名称</label>
    <length>50</length>
    <type>Text</type>
</CustomField>