force-app/main/default/objects/AiAssessmentSync__c/fields/color_in__c.field-meta.xml
<CustomField>
    <fullName>color_in__c</fullName>
    <label>内装色</label>
    <length>255</length>
    <type>Text</type>
</CustomField>