force-app/main/default/objects/AiAssessmentSync__c/fields/color_in_biko__c.field-meta.xml
<CustomField>
    <fullName>color_in_biko__c</fullName>
    <label>内装備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>