force-app/main/default/objects/AiAssessmentSync__c/fields/color_index__c.field-meta.xml
<CustomField>
    <fullName>color_index__c</fullName>
    <label>車体色番号</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>