force-app/main/default/objects/AiAssessmentSync__c/fields/contact_comment__c.field-meta.xml
<CustomField>
    <fullName>contact_comment__c</fullName>
    <label>承認者メモ欄</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>