force-app/main/default/objects/AiAssessmentSync__c/fields/custom_satei_id__c.field-meta.xml
<CustomField>
    <fullName>custom_satei_id__c</fullName>
    <label>査定ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>