force-app/main/default/objects/AiAssessmentSync__c/fields/denso_list__c.field-meta.xml
<CustomField>
    <fullName>denso_list__c</fullName>
    <label>電装リスト</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>