force-app/main/default/objects/AiAssessmentSync__c/fields/disp_id__c.field-meta.xml
<CustomField>
    <fullName>disp_id__c</fullName>
    <label>ディスプレイ</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>