force-app/main/default/objects/AiAssessmentSync__c/fields/disp_nm__c.field-meta.xml
<CustomField>
    <fullName>disp_nm__c</fullName>
    <label>ディスプレイ選択値</label>
    <length>255</length>
    <type>Text</type>
</CustomField>