force-app/main/default/objects/AiAssessmentSync__c/fields/disp_type__c.field-meta.xml
<CustomField>
    <fullName>disp_type__c</fullName>
    <label>ディスプレイタイプ</label>
    <length>2</length>
    <type>Text</type>
</CustomField>