force-app/main/default/objects/AiAssessmentSync__c/fields/door_cd__c.field-meta.xml
<CustomField>
    <fullName>door_cd__c</fullName>
    <label>ドアコード</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>