force-app/main/default/objects/AiAssessmentSync__c/fields/door_nm__c.field-meta.xml
<CustomField>
    <fullName>door_nm__c</fullName>
    <label>ドア名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>