force-app/main/default/objects/AiAssessmentSync__c/fields/drive_cd__c.field-meta.xml
<CustomField>
    <fullName>drive_cd__c</fullName>
    <label>駆動コード</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>