force-app/main/default/objects/AiAssessmentSync__c/fields/drive_nm__c.field-meta.xml
<CustomField>
    <fullName>drive_nm__c</fullName>
    <label>駆動</label>
    <length>128</length>
    <type>Text</type>
</CustomField>