force-app/main/default/objects/AiAssessmentSync__c/fields/engine_katashiki__c.field-meta.xml
<CustomField>
    <fullName>engine_katashiki__c</fullName>
    <label>エンジン型式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>