force-app/main/default/objects/AiAssessmentSync__c/fields/evaluation_points__c.field-meta.xml
<CustomField>
    <fullName>evaluation_points__c</fullName>
    <label>評価点（価格算出時使用用）</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>