force-app/main/default/objects/AiAssessmentSync__c/fields/exhaust_cd__c.field-meta.xml
<CustomField>
    <fullName>exhaust_cd__c</fullName>
    <label>排気コード</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>