force-app/main/default/objects/AiAssessmentSync__c/fields/exhaust_nm__c.field-meta.xml
<CustomField>
    <fullName>exhaust_nm__c</fullName>
    <label>排気量</label>
    <length>20</length>
    <type>Text</type>
</CustomField>