force-app/main/default/objects/AiAssessmentSync__c/fields/first_satei_date__c.field-meta.xml
<CustomField>
    <fullName>first_satei_date__c</fullName>
    <label>初回査定日</label>
    <type>DateTime</type>
</CustomField>