force-app/main/default/objects/AiAssessmentSync__c/fields/fmc_mc_month__c.field-meta.xml
<CustomField>
    <fullName>fmc_mc_month__c</fullName>
    <label>FMCした月</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>