force-app/main/default/objects/AiAssessmentSync__c/fields/fmc_mc_year__c.field-meta.xml
<CustomField>
    <fullName>fmc_mc_year__c</fullName>
    <label>FMCした年</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>