force-app/main/default/objects/AiAssessmentSync__c/fields/freon_price__c.field-meta.xml
<CustomField>
    <fullName>freon_price__c</fullName>
    <label>フロン類料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>