force-app/main/default/objects/AiAssessmentSync__c/fields/front_tire_size__c.field-meta.xml
<CustomField>
    <fullName>front_tire_size__c</fullName>
    <label>フロントタイヤサイズカタログ値</label>
    <length>128</length>
    <type>Text</type>
</CustomField>