force-app/main/default/objects/AiAssessmentSync__c/fields/front_tire_size_chage__c.field-meta.xml
<CustomField>
    <fullName>front_tire_size_chage__c</fullName>
    <label>フロントタイヤサイズ入力値</label>
    <length>128</length>
    <type>Text</type>
</CustomField>