force-app/main/default/objects/AiAssessmentSync__c/fields/front_weight__c.field-meta.xml
<CustomField>
    <fullName>front_weight__c</fullName>
    <label>車検証前前軸重</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>