force-app/main/default/objects/AiAssessmentSync__c/fields/fuel_cd__c.field-meta.xml
<CustomField>
    <fullName>fuel_cd__c</fullName>
    <label>燃料コード</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>