force-app/main/default/objects/AiAssessmentSync__c/fields/gaisou_value__c.field-meta.xml
<CustomField>
    <fullName>gaisou_value__c</fullName>
    <label>外装評価点</label>
    <length>2</length>
    <type>Text</type>
</CustomField>