force-app/main/default/objects/AiAssessmentSync__c/fields/grade_nm__c.field-meta.xml
<CustomField>
    <fullName>grade_nm__c</fullName>
    <label>グレード名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>