force-app/main/default/objects/AiAssessmentSync__c/fields/guest_name__c.field-meta.xml
<CustomField>
    <fullName>guest_name__c</fullName>
    <label>お客様氏名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>