force-app/main/default/objects/AiAssessmentSync__c/fields/guest_syubetu__c.field-meta.xml
<CustomField>
    <fullName>guest_syubetu__c</fullName>
    <label>所有権解除</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>