force-app/main/default/objects/AiAssessmentSync__c/fields/height__c.field-meta.xml
<CustomField>
    <fullName>height__c</fullName>
    <label>車寸_高さ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>