force-app/main/default/objects/AiAssessmentSync__c/fields/Id_18__c.field-meta.xml
<CustomField>
    <fullName>Id_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AI査定連携ID(18ケタ)</label>
    <type>Text</type>
</CustomField>