force-app/main/default/objects/AiAssessmentSync__c/fields/import_class__c.field-meta.xml
<CustomField>
    <fullName>import_class__c</fullName>
    <label>輸入区分</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>