force-app/main/default/objects/AiAssessmentSync__c/fields/import_syear__c.field-meta.xml
<CustomField>
    <fullName>import_syear__c</fullName>
    <label>輸入車等用年式</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>