force-app/main/default/objects/AiAssessmentSync__c/fields/information_price__c.field-meta.xml
<CustomField>
    <fullName>information_price__c</fullName>
    <label>情報管理料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>