force-app/main/default/objects/AiAssessmentSync__c/fields/iro_index0__c.field-meta.xml
<CustomField>
    <fullName>iro_index0__c</fullName>
    <label>色インデックス</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>