force-app/main/default/objects/AiAssessmentSync__c/fields/is_safety__c.field-meta.xml
<CustomField>
    <fullName>is_safety__c</fullName>
    <label>車検有無</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>