force-app/main/default/objects/AiAssessmentSync__c/fields/jibaiseki__c.field-meta.xml
<CustomField>
    <fullName>jibaiseki__c</fullName>
    <label>自賠責</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>