force-app/main/default/objects/AiAssessmentSync__c/fields/jibaiseki_end__c.field-meta.xml
<CustomField>
    <fullName>jibaiseki_end__c</fullName>
    <label>自賠責_終了</label>
    <type>Date</type>
</CustomField>