force-app/main/default/objects/AiAssessmentSync__c/fields/jibaiseki_month__c.field-meta.xml
<CustomField>
    <fullName>jibaiseki_month__c</fullName>
    <label>自賠責（ヶ月）</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>