force-app/main/default/objects/AiAssessmentSync__c/fields/jibaiseki_start__c.field-meta.xml
<CustomField>
    <fullName>jibaiseki_start__c</fullName>
    <label>自賠責_開始</label>
    <type>Date</type>
</CustomField>