force-app/main/default/objects/AiAssessmentSync__c/fields/katashiki_etc__c.field-meta.xml
<CustomField>
    <fullName>katashiki_etc__c</fullName>
    <label>通称型式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>