force-app/main/default/objects/AiAssessmentSync__c/fields/katashiki_nm__c.field-meta.xml
<CustomField>
    <fullName>katashiki_nm__c</fullName>
    <label>型式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>