force-app/main/default/objects/AiAssessmentSync__c/fields/katashiki_shitei_no__c.field-meta.xml
<CustomField>
    <fullName>katashiki_shitei_no__c</fullName>
    <label>型式指定番号</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>