force-app/main/default/objects/AiAssessmentSync__c/fields/kbn__c.field-meta.xml
<CustomField>
    <fullName>kbn__c</fullName>
    <label>区分</label>
    <length>10</length>
    <type>Text</type>
</CustomField>