force-app/main/default/objects/AiAssessmentSync__c/fields/kikan_denso_no_problem_flg__c.field-meta.xml
<CustomField>
    <fullName>kikan_denso_no_problem_flg__c</fullName>
    <label>機関・電装問題なしフラグ</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>