force-app/main/default/objects/AiAssessmentSync__c/fields/kikan_list__c.field-meta.xml
<CustomField>
    <fullName>kikan_list__c</fullName>
    <label>機関リスト</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>