force-app/main/default/objects/AiAssessmentSync__c/fields/left_after_tire__c.field-meta.xml
<CustomField>
    <fullName>left_after_tire__c</fullName>
    <label>左後タイヤ状態</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>