force-app/main/default/objects/AiAssessmentSync__c/fields/left_front_wheel__c.field-meta.xml
<CustomField>
    <fullName>left_front_wheel__c</fullName>
    <label>左前タイヤホイールキズ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>