force-app/main/default/objects/AiAssessmentSync__c/fields/length__c.field-meta.xml
<CustomField>
    <fullName>length__c</fullName>
    <label>車寸_長さ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>