force-app/main/default/objects/AiAssessmentSync__c/fields/level_s__c.field-meta.xml
<CustomField>
    <fullName>level_s__c</fullName>
    <label>内装状態</label>
    <length>255</length>
    <type>Text</type>
</CustomField>