force-app/main/default/objects/AiAssessmentSync__c/fields/mail_adress__c.field-meta.xml
<CustomField>
    <fullName>mail_adress__c</fullName>
    <label>メールアドレス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>