force-app/main/default/objects/AiAssessmentSync__c/fields/mail_comment__c.field-meta.xml
<CustomField>
    <fullName>mail_comment__c</fullName>
    <label>メール反映コメント</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>