force-app/main/default/objects/AiAssessmentSync__c/fields/mete_altor__c.field-meta.xml
<CustomField>
    <fullName>mete_altor__c</fullName>
    <label>メーター改竄</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>