force-app/main/default/objects/AiAssessmentSync__c/fields/meter_distance__c.field-meta.xml
<CustomField>
    <fullName>meter_distance__c</fullName>
    <label>メーター交換距離</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>