force-app/main/default/objects/AiAssessmentSync__c/fields/meter_distance_unit__c.field-meta.xml
<CustomField>
    <fullName>meter_distance_unit__c</fullName>
    <label>メーター交換距離単位</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>