force-app/main/default/objects/AiAssessmentSync__c/fields/meter_exchange__c.field-meta.xml
<CustomField>
    <fullName>meter_exchange__c</fullName>
    <label>メーター交換有無</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>