force-app/main/default/objects/AiAssessmentSync__c/fields/mission_nm__c.field-meta.xml
<CustomField>
    <fullName>mission_nm__c</fullName>
    <label>ミッション名</label>
    <length>128</length>
    <type>Text</type>
</CustomField>