force-app/main/default/objects/AiAssessmentSync__c/fields/model_cycle_name__c.field-meta.xml
<CustomField>
    <fullName>model_cycle_name__c</fullName>
    <label>モデルサイクル名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>