force-app/main/default/objects/AiAssessmentSync__c/fields/moving_distance__c.field-meta.xml
<CustomField>
    <fullName>moving_distance__c</fullName>
    <label>走行距離</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>