force-app/main/default/objects/AiAssessmentSync__c/fields/moving_explanation__c.field-meta.xml
<CustomField>
    <fullName>moving_explanation__c</fullName>
    <label>走行不明</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>