force-app/main/default/objects/AiAssessmentSync__c/fields/moving_unit__c.field-meta.xml
<CustomField>
    <fullName>moving_unit__c</fullName>
    <label>走行距離単位</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>