force-app/main/default/objects/AiAssessmentSync__c/fields/naisou_value__c.field-meta.xml
<CustomField>
    <fullName>naisou_value__c</fullName>
    <label>内装評価点</label>
    <length>2</length>
    <type>Text</type>
</CustomField>