force-app/main/default/objects/AiAssessmentSync__c/fields/navi_biko__c.field-meta.xml
<CustomField>
    <fullName>navi_biko__c</fullName>
    <label>ディスプレイ・ナビ備考_フリー入力</label>
    <length>20</length>
    <type>Text</type>
</CustomField>