force-app/main/default/objects/AiAssessmentSync__c/fields/navi_biko_select_cd__c.field-meta.xml
<CustomField>
    <fullName>navi_biko_select_cd__c</fullName>
    <label>ディスプレイ・ナビ備考_選択項目コード</label>
    <length>9</length>
    <type>Text</type>
</CustomField>