force-app/main/default/objects/AiAssessmentSync__c/fields/navi_biko_select_nm__c.field-meta.xml
<CustomField>
    <fullName>navi_biko_select_nm__c</fullName>
    <label>ディスプレイ・ナビ備考_選択項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>