force-app/main/default/objects/AiAssessmentSync__c/fields/navi_biko_view_num__c.field-meta.xml
<CustomField>
    <fullName>navi_biko_view_num__c</fullName>
    <label>ディスプレイ・ナビ備考 表示順</label>
    <length>255</length>
    <type>Text</type>
</CustomField>