force-app/main/default/objects/AiAssessmentSync__c/fields/navi_id__c.field-meta.xml
<CustomField>
    <fullName>navi_id__c</fullName>
    <label>ナビ</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>