force-app/main/default/objects/AiAssessmentSync__c/fields/navi_media__c.field-meta.xml
<CustomField>
    <fullName>navi_media__c</fullName>
    <label>ナビ_メディア</label>
    <length>255</length>
    <type>Text</type>
</CustomField>