force-app/main/default/objects/AiAssessmentSync__c/fields/navi_nm__c.field-meta.xml
<CustomField>
    <fullName>navi_nm__c</fullName>
    <label>ナビ選択値</label>
    <length>255</length>
    <type>Text</type>
</CustomField>