force-app/main/default/objects/AiAssessmentSync__c/fields/number__c.field-meta.xml
<CustomField>
    <fullName>number__c</fullName>
    <label>ナンバー</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>