force-app/main/default/objects/AiAssessmentSync__c/fields/number_class__c.field-meta.xml
<CustomField>
    <fullName>number_class__c</fullName>
    <label>ナンバー_分類番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>