force-app/main/default/objects/AiAssessmentSync__c/fields/number_kana__c.field-meta.xml
<CustomField>
    <fullName>number_kana__c</fullName>
    <label>ナンバー_ひらがな</label>
    <length>2</length>
    <type>Text</type>
</CustomField>