force-app/main/default/objects/AiAssessmentSync__c/fields/number_place__c.field-meta.xml
<CustomField>
    <fullName>number_place__c</fullName>
    <label>ナンバー_地名</label>
    <length>20</length>
    <type>Text</type>
</CustomField>