force-app/main/default/objects/AiAssessmentSync__c/fields/nyuko_kakutei__c.field-meta.xml
<CustomField>
    <fullName>nyuko_kakutei__c</fullName>
    <label>入庫確定日</label>
    <type>Date</type>
</CustomField>