force-app/main/default/objects/AiAssessmentSync__c/fields/nyuko_yotei__c.field-meta.xml
<CustomField>
    <fullName>nyuko_yotei__c</fullName>
    <label>入庫予定日</label>
    <type>Date</type>
</CustomField>