force-app/main/default/objects/AiAssessmentSync__c/fields/option_list__c.field-meta.xml
<CustomField>
    <fullName>option_list__c</fullName>
    <label>装備車両詳細</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>