force-app/main/default/objects/AiAssessmentSync__c/fields/original_price__c.field-meta.xml
<CustomField>
    <fullName>original_price__c</fullName>
    <label>AI価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>