force-app/main/default/objects/AiAssessmentSync__c/fields/other_info__c.field-meta.xml
<CustomField>
    <fullName>other_info__c</fullName>
    <label>その他情報</label>
    <length>510</length>
    <type>LongTextArea</type>
</CustomField>