force-app/main/default/objects/AiAssessmentSync__c/fields/owner_adress__c.field-meta.xml
<CustomField>
    <fullName>owner_adress__c</fullName>
    <label>所有者_住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>