force-app/main/default/objects/AiAssessmentSync__c/fields/owner_name__c.field-meta.xml
<CustomField>
    <fullName>owner_name__c</fullName>
    <label>所有者_氏名又は名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>