force-app/main/default/objects/AiAssessmentSync__c/fields/puncture_repairkit__c.field-meta.xml
<CustomField>
    <fullName>puncture_repairkit__c</fullName>
    <label>タイヤパンク修理キット有無</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>