force-app/main/default/objects/AiAssessmentSync__c/fields/purchase_opportunity__c.field-meta.xml
<CustomField>
    <fullName>purchase_opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>AI査定連携</relationshipLabel>
    <relationshipName>AiAssessments</relationshipName>
    <type>Lookup</type>
</CustomField>