force-app/main/default/objects/AiAssessmentSync__c/fields/razorseet__c.field-meta.xml
<CustomField>
    <fullName>razorseet__c</fullName>
    <label>レザーシート</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>