force-app/main/default/objects/AiAssessmentSync__c/fields/rear_weight__c.field-meta.xml
<CustomField>
    <fullName>rear_weight__c</fullName>
    <label>車検証後後軸重</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>