force-app/main/default/objects/AiAssessmentSync__c/fields/recycle_money__c.field-meta.xml
<CustomField>
    <fullName>recycle_money__c</fullName>
    <label>リサイクル預託金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>