force-app/main/default/objects/AiAssessmentSync__c/fields/recycling_deposit_date__c.field-meta.xml
<CustomField>
    <fullName>recycling_deposit_date__c</fullName>
    <label>リサイクル預託金預託日</label>
    <type>Date</type>
</CustomField>