force-app/main/default/objects/AiAssessmentSync__c/fields/regist_date__c.field-meta.xml
<CustomField>
    <fullName>regist_date__c</fullName>
    <label>登録年月日</label>
    <type>Date</type>
</CustomField>