force-app/main/default/objects/AiAssessmentSync__c/fields/repair_biko__c.field-meta.xml
<CustomField>
    <fullName>repair_biko__c</fullName>
    <label>修復状態備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>