force-app/main/default/objects/AiAssessmentSync__c/fields/repair_info__c.field-meta.xml
<CustomField>
    <fullName>repair_info__c</fullName>
    <label>修復有無</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>