force-app/main/default/objects/AiAssessmentSync__c/fields/restore__c.field-meta.xml
<CustomField>
    <fullName>restore__c</fullName>
    <label>修復状態</label>
    <length>540</length>
    <type>LongTextArea</type>
</CustomField>