force-app/main/default/objects/AiAssessmentSync__c/fields/right_after_wheel__c.field-meta.xml
<CustomField>
    <fullName>right_after_wheel__c</fullName>
    <label>右後タイヤホイールキズ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>