force-app/main/default/objects/AiAssessmentSync__c/fields/ruibetsu_no__c.field-meta.xml
<CustomField>
    <fullName>ruibetsu_no__c</fullName>
    <label>類別区分番号</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>