force-app/main/default/objects/AiAssessmentSync__c/fields/safety_date__c.field-meta.xml
<CustomField>
    <fullName>safety_date__c</fullName>
    <label>車検満了日</label>
    <type>Date</type>
</CustomField>