force-app/main/default/objects/AiAssessmentSync__c/fields/sales_user_id__c.field-meta.xml
<CustomField>
    <fullName>sales_user_id__c</fullName>
    <label>営業担当者ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>