force-app/main/default/objects/AiAssessmentSync__c/fields/satei_date__c.field-meta.xml
<CustomField>
    <fullName>satei_date__c</fullName>
    <label>査定日付</label>
    <type>DateTime</type>
</CustomField>