force-app/main/default/objects/AiAssessmentSync__c/fields/satei_id__c.field-meta.xml
<CustomField>
    <fullName>satei_id__c</fullName>
    <externalId>true</externalId>
    <label>査定ID(連携用)</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>