force-app/main/default/objects/AiAssessmentSync__c/fields/serial_number__c.field-meta.xml
<CustomField>
    <fullName>serial_number__c</fullName>
    <label>シリアルNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>