force-app/main/default/objects/AiAssessmentSync__c/fields/shonin_date__c.field-meta.xml
<CustomField>
    <fullName>shonin_date__c</fullName>
    <label>承認日</label>
    <type>DateTime</type>
</CustomField>