force-app/main/default/objects/AiAssessmentSync__c/fields/shonin_kakaku__c.field-meta.xml
<CustomField>
    <fullName>shonin_kakaku__c</fullName>
    <label>承認価格</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>