force-app/main/default/objects/AiAssessmentSync__c/fields/shonin_user__c.field-meta.xml
<CustomField>
    <fullName>shonin_user__c</fullName>
    <label>承認者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>