force-app/main/default/objects/AiAssessmentSync__c/fields/shonin_user_id__c.field-meta.xml
<CustomField>
    <fullName>shonin_user_id__c</fullName>
    <label>承認ユーザーID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>