force-app/main/default/objects/AiAssessmentSync__c/fields/shredder_price__c.field-meta.xml
<CustomField>
    <fullName>shredder_price__c</fullName>
    <label>シュレッダーダスト料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>