force-app/main/default/objects/AiAssessmentSync__c/fields/start_date__c.field-meta.xml
<CustomField>
    <fullName>start_date__c</fullName>
    <label>初度登録年月</label>
    <type>Date</type>
</CustomField>