force-app/main/default/objects/AiAssessmentSync__c/fields/stock_tire__c.field-meta.xml
<CustomField>
    <fullName>stock_tire__c</fullName>
    <label>予備タイヤ状態</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>