force-app/main/default/objects/AiAssessmentSync__c/fields/stock_tire_flg__c.field-meta.xml
<CustomField>
    <fullName>stock_tire_flg__c</fullName>
    <label>予備タイヤ有無</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>