force-app/main/default/objects/AiAssessmentSync__c/fields/stock_wheel__c.field-meta.xml
<CustomField>
    <fullName>stock_wheel__c</fullName>
    <label>予備ホイール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>