force-app/main/default/objects/AiAssessmentSync__c/fields/sunroof__c.field-meta.xml
<CustomField>
    <fullName>sunroof__c</fullName>
    <label>サンルーフ</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>