force-app/main/default/objects/AiAssessmentSync__c/fields/syaken_month__c.field-meta.xml
<CustomField>
    <fullName>syaken_month__c</fullName>
    <label>車検_月</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>