force-app/main/default/objects/AiAssessmentSync__c/fields/syaken_year__c.field-meta.xml
<CustomField>
    <fullName>syaken_year__c</fullName>
    <label>車検_年</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>