force-app/main/default/objects/AiAssessmentSync__c/fields/syear__c.field-meta.xml
<CustomField>
    <fullName>syear__c</fullName>
    <label>西暦</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>