force-app/main/default/objects/AiAssessmentSync__c/fields/teiin_cd__c.field-meta.xml
<CustomField>
    <fullName>teiin_cd__c</fullName>
    <label>定員コード</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>