force-app/main/default/objects/AiAssessmentSync__c/fields/teiin_nm__c.field-meta.xml
<CustomField>
    <fullName>teiin_nm__c</fullName>
    <label>定員</label>
    <length>16</length>
    <type>Text</type>
</CustomField>