force-app/main/default/objects/AiAssessmentSync__c/fields/tenkaizu_id__c.field-meta.xml
<CustomField>
    <fullName>tenkaizu_id__c</fullName>
    <label>展開図ID</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>